# union

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  test.yml
crates/autostart/: Cargo.toml
crates/autostart/src/: lib.rs
crates/client/: Cargo.toml
crates/client/src/: config.rs  main.rs
crates/clipboard-sync/: Cargo.toml
crates/clipboard-sync/src/: lib.rs
crates/gui/: Cargo.toml
crates/gui/src/: main.rs
crates/input-capture/: Cargo.toml
crates/input-capture/src/: keymap.rs  lib.rs
crates/input-inject/: Cargo.toml
crates/input-inject/src/: keymap.rs  lib.rs
crates/lock-watch/: Cargo.toml
crates/lock-watch/src/: lib.rs
crates/overlay/: Cargo.toml
crates/overlay/src/: main.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/send-tool/: Cargo.toml
crates/send-tool/src/: main.rs
crates/server/: Cargo.toml
crates/server/src/: auth_throttle.rs  cert_store.rs  config.rs  ipc.rs  main.rs  metrics.rs  reload.rs  state.rs  status.rs
crates/session/: Cargo.toml
crates/session/src/: lib.rs
crates/session/tests/: e2e.rs
crates/tls/: Cargo.toml
crates/tls/src/: cert.rs  lib.rs  psk.rs  transport.rs
examples/: client.toml  server.toml
packaging/linux/: build.sh  union-client.service  union-gui.desktop  union-server.service
packaging/linux/maintainer-scripts/: postinst  postrm
packaging/macos/: Info.plist  build.sh  dev.union.client.plist  dev.union.server.plist  install-launchagent.sh  launcher.sh  uninstall-launchagent.sh
packaging/windows/: README.md  build.ps1  license.rtf  main.wxs
