[workspace]
resolver = "2"
members = [
    "crates/protocol",
    "crates/tls",
    "crates/session",
    "crates/input-inject",
    "crates/input-capture",
    "crates/clipboard-sync",
    "crates/autostart",
    "crates/server",
    "crates/client",
    "crates/gui",
    "crates/overlay",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://github.com/local/union"

[workspace.dependencies]
tokio = { version = "1.40", features = ["rt-multi-thread", "net", "io-util", "sync", "time", "macros", "signal"] }
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
rustls-pemfile = "2.1"
rcgen = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
arboard = { version = "3.4", default-features = false, features = ["image-data"] }
image = { version = "0.25", default-features = false, features = ["png"] }
notify-rust = "4.11"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
mdns-sd = "0.13"
display-info = "0.5"

# Protocol
protocol = { path = "crates/protocol" }
union-tls = { path = "crates/tls" }
union-session = { path = "crates/session" }
input-inject = { path = "crates/input-inject" }
input-capture = { path = "crates/input-capture" }
clipboard-sync = { path = "crates/clipboard-sync" }
union-autostart = { path = "crates/autostart" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
opt-level = 3
