[package]
name = "union-client"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Union — software KVM client daemon (receives input from a Union server)"
repository.workspace = true

[[bin]]
name = "union-client"
path = "src/main.rs"

[package.metadata.deb]
maintainer = "Union Project"
copyright = "2026, Union Project"
license-file = ["../../LICENSE", "0"]
extended-description = """Client daemon for Union, a cross-platform software KVM. \
Runs on each remote machine, receives keyboard/mouse events from a Union server \
over TLS 1.3, and injects them into the local OS."""
depends = "$auto, libx11-6, libxi6, libxtst6"
section = "net"
priority = "optional"
maintainer-scripts = "../../packaging/linux/maintainer-scripts"
assets = [
    ["target/release/union-client", "usr/bin/", "755"],
    ["../../examples/client.toml", "etc/union/client.toml.example", "644"],
    ["../../README.md", "usr/share/doc/union-client/README.md", "644"],
    ["../../packaging/linux/union-client.service", "lib/systemd/user/union-client.service", "644"],
]
conf-files = ["/etc/union/client.toml.example"]

[package.metadata.deb.systemd-units]
unit-scripts = "../../packaging/linux"
enable = false
start = false

[dependencies]
tokio = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
union-session = { workspace = true }
rdev = "0.5"
hex = { workspace = true }
protocol = { workspace = true }
union-tls = { workspace = true }
input-inject = { workspace = true }
clipboard-sync = { workspace = true }
