[package]
name = "clipboard-sync"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arboard = { workspace = true }
image = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
notify-rust = { workspace = true }
protocol = { workspace = true }
