[package]
name = "input-capture"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
protocol = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
rdev = { version = "0.5", features = ["unstable_grab"] }
