[package]
name = "union-lock-watch"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Union — cross-OS screen-lock detector"

[lib]
path = "src/lib.rs"

[dependencies]
tracing = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_System_StationsAndDesktops",
    "Win32_Foundation",
    "Win32_System_SystemServices",
] }
