[package]
name = "union-send"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Union — push a file from the local host into the daemon's focused client"
repository.workspace = true

[[bin]]
name = "union-send"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true }
