[package]
name = "union-session"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
protocol = { workspace = true }
union-tls = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio-rustls = { workspace = true }
rustls = { workspace = true }
