[package]
name = "union-tls"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rustls = { workspace = true }
tokio-rustls = { workspace = true }
rustls-pemfile = { workspace = true }
rcgen = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
rand = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }
protocol = { workspace = true }
